fixed the images not showing right in landscape

--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,8 @@ body {
 /* start of style for home page */
 
 .image-con {
-  width: 92.23%;
+  /* width: 92.23%; */
+  width: 380px;
   margin-top: 71px;
   margin-left: auto;
   margin-right: auto;
@@ -312,20 +313,26 @@ body {
   display: flex;
   transform: translateX(0);
   transition: transform 0.8s;
+  width: 100%;
+  /* width: 92.23%; */
 }
 @media (orientation: landscape) and (max-width: 933px) {
   .image-con {
-    width: 47%;
+    width: 380px;
+    /* width: 47%; */
     margin-top: 25px;
     margin-left: auto;
     margin-right: auto;
-    display: flex;
     /* overflow-x: scroll; */
     /* overflow: auto; */
     /* scroll-snap-type: x mandatory; */
     position: relative;
     /* scroll-behavior: smooth; */
-    cursor: grab;
+    overflow: hidden;
+  }
+
+  .image-con__images {
+    width: 100%;
   }
 }
 
@@ -374,6 +381,7 @@ body {
 .slider-buttons__svg {
   filter: drop-shadow(2px 2px 2px black);
   pointer-events: none;
+  opacity: 0.8;
 }
 
 #left {
